# EGSM

./: .gitignore  CMakeLists.txt  main.cpp  master_script.sh
datasets/enron/label_1/data_graph/: cuts.graph
datasets/enron/label_1/query_graph/6/cuts/: Q_0  Q_1  Q_10  Q_11  Q_12  Q_13  Q_14  Q_15  Q_16  Q_17  Q_18  Q_19  Q_2  Q_20  Q_21  Q_22  Q_23  Q_24  Q_25  Q_26  Q_27  Q_28  Q_29  Q_3  Q_30  Q_31  Q_32  Q_33  Q_34  Q_35  Q_36  Q_37  Q_38  Q_39  Q_4  Q_40  Q_41  Q_42  Q_43  Q_44  (+60 more)
datasets/enron/label_1/query_graph/6/gsi/: Q_0  Q_1  Q_10  Q_11  Q_12  Q_13  Q_14  Q_15  Q_16  Q_17  Q_18  Q_19  Q_2  Q_20  Q_21  Q_22  Q_23  Q_24  Q_25  Q_26  Q_27  Q_28  Q_29  Q_3  Q_30  Q_31  Q_32  Q_33  Q_34  Q_35  Q_36  Q_37  Q_38  Q_39  Q_4  Q_40  Q_41  Q_42  Q_43  Q_44  (+60 more)
datasets/enron/label_1/query_graph/6/ours/: Q_0  Q_1  Q_10  Q_11  Q_12  Q_13  Q_14  Q_15  Q_16  Q_17  Q_18  Q_19  Q_2  Q_20  Q_21  Q_22  Q_23  Q_24  Q_25  Q_26  Q_27  Q_28  Q_29  Q_3  Q_30  Q_31  Q_32  Q_33  Q_34  Q_35  Q_36  Q_37  Q_38  Q_39  Q_4  Q_40  Q_41  Q_42  Q_43  Q_44  (+60 more)
datasets/enron/label_16/data_graph/: cuts.graph  ours.graph
datasets/enron/label_16/query_graph/10/cuts/: Q_0  Q_1  Q_10  Q_11  Q_12  Q_13  Q_14  Q_15  Q_16  Q_17  Q_18  Q_19  Q_2  Q_20  Q_21  Q_22  Q_23  Q_24  Q_25  Q_26  Q_27  Q_28  Q_29  Q_3  Q_30  Q_31  Q_32  Q_33  Q_34  Q_35  Q_36  Q_37  Q_38  Q_39  Q_4  Q_40  Q_41  Q_42  Q_43  Q_44  (+60 more)
datasets/enron/label_16/query_graph/10/gsi/: ._Q_12  Q_0  Q_1  Q_10  Q_11  Q_12  Q_13  Q_14  Q_15  Q_16  Q_17  Q_18  Q_19  Q_2  Q_20  Q_21  Q_22  Q_23  Q_24  Q_25  Q_26  Q_27  Q_28  Q_29  Q_3  Q_30  Q_31  Q_32  Q_33  Q_34  Q_35  Q_36  Q_37  Q_38  Q_39  Q_4  Q_40  Q_41  Q_42  Q_43  (+61 more)
datasets/enron/label_16/query_graph/10/ours/: Q_0  Q_1  Q_10  Q_11  Q_12  Q_13  Q_14  Q_15  Q_16  Q_17  Q_18  Q_19  Q_2  Q_20  Q_21  Q_22  Q_23  Q_24  Q_25  Q_26  Q_27  Q_28  Q_29  Q_3  Q_30  Q_31  Q_32  Q_33  Q_34  Q_35  Q_36  Q_37  Q_38  Q_39  Q_4  (+65 more)
datasets/enron/label_32/data_graph/: cuts.graph  ours.graph
datasets/enron/label_4/data_graph/: cuts.graph  ours.graph
datasets/enron/label_8/data_graph/: cuts.graph  ours.graph
execution/: execution.cu  execution.h
experiments/1_run/: run_cuts.py  run_gsi.py  run_ours.py  run_ours_bfs.py  run_ours_dfs.py  run_ours_nof3.py  run_ours_nolb.py  run_ours_static.py
experiments/2_collect/: 0-unsolved.py  1-overall-scatter.py  10-num-results.py  2-filtering-space.py  2-filtering-time.py  2-filtering.py  3-BFS.py  3-DFS.py  3-filtering.py  3-load-balancing.py  3-order.py  7-solved.py  7-time.py  8-solved.py  8-time.py  9-solved.py  9-time.py
experiments/3_draw/: 0-unsolved.py  1-overall-scatter.py  10-num-results.py  2-filtering-space.py  2-filtering-time.py  2-filtering-varying-startv.py  2-filtering.py  3-BFS.py  3-DFS.py  3-filtering.py  3-load-balancing.py  3-order.py  7-solved.py  7-time.py  8-solved.py  8-time.py  9-solved.py  9-time.py
graph/: graph.cpp  graph.h  graph_gpu.cu  graph_gpu.h  operations.cpp  operations.h
processing/: common.h  join_bfs.cu  join_bfs.h  join_bfs_dfs.cu  join_bfs_dfs.h  plan.cu  plan.h
results/csv/overall/: enron_16_num_results_12.csv  gowalla_16_overall_scatter.csv
results/csv/scalability/nlabels/: enron_8_overall.csv
structures/: hashed_trie_manager.cu  hashed_trie_manager.h  hashed_trie_manager_kernel.cu  hashed_trie_manager_kernel.h  hashed_tries.cu
utils/: config.h  globals.cu  globals.h  mem_pool.cu  types.h
utils/nucleus/: nd.h  nd_interface.h  util.cpp
(+3295 files in other folders)
